--- a/index.html
+++ b/index.html
@@ -22,8 +22,150 @@
 </head>
 
 <body>
-    <!-- bottstrap script -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-</body>
+    <!-- top Header start -->
 
+    <nav class="p-1 as-primary-bg text-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <div>
+                        <a href="#" class="fw-bold text-light text-decoration-none">
+                            <span class="fs-5 me-2"><i class="fa-solid fa-square-phone"></i
+                ></span> +8801321157152
+                        </a>
+
+                        <a href="#" class="fw-bold text-light text-decoration-none ms-2">
+                            <span class="fs-5 me-2"><i class="fa-solid fa-envelope"></i></span
+                >info@ibos.io</a
+              >
+            </div>
+          </div>
+          <div class="col-6 text-end">
+            <div>
+              <a
+                href="#"
+                class="fw-bold as-brand-color-fb text-decoration-none m-1"
+              >
+                <i class="fa-brands fa-square-facebook"></i>
+              </a>
+              <a
+                href="#"
+                class="fw-bold as-brand-color-linkedin text-decoration-none m-1"
+              >
+                <i class="fa-brands fa-linkedin"></i>
+              </a>
+              <a
+                href="#"
+                class="fw-bold as-brand-color-tweeter text-decoration-none m-1"
+              >
+                <i class="fa-brands fa-square-twitter"></i>
+              </a>
+              <a
+                href="#"
+                class="fw-bold as-brand-color-youtube text-decoration-none m-1"
+              >
+                <i class="fa-brands fa-square-youtube"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <!-- top Header end -->
+    <!-- main nav start -->
+    <main class="py-2 bg-light shadow-lg">
+      <div class="container">
+        <div class="row">
+          <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+              <img
+                src="./assets/images/ibos-logo-210.webp"
+                alt=""
+                class="navbar-brand"
+                style="width: 80px"
+              />
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-uppercase as-primary fw-bold">
+                                    <li class="nav-item mx-2">
+                                        <a class="nav-link hover-bg active py-2 px-3 as-primary-bg text-light fw-bold" aria-current="page" href="#">Home</a
+                    >
+                  </li>
+                  <li class="nav-item mx-2">
+                    <a class="nav-link hover-bg as-primary" href="#">About</a>
+                                    </li>
+                                    <li class="nav-item mx-2 dropdown">
+                                        <a class="nav-link hover-bg dropdown-toggle as-primary" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Product+
+                    </a>
+                                        <ul class="dropdown-menu p-3">
+                                            <li>
+                                                <a class="dropdown-item as-primary hover-bg p-2 fw-bold" href="#">iBOS Enterprise(ERP)
+                        </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item as-primary hover-bg p-2 fw-bold" href="#">iBOS Managerium
+                        </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item as-primary hover-bg p-2 fw-bold" href="#">iBOS PeopleDesk
+                        </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item as-primary hover-bg p-2 fw-bold" href="#">iBOS Prime VAT
+                        </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item as-primary hover-bg p-2 fw-bold" href="#">iBOS SME
+                        </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item as-primary hover-bg p-2 fw-bold" href="#">iBOS RTM
+                        </a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="nav-item mx-2">
+                                        <a class="nav-link hover-bg as-primary" href="#">client</a>
+                                    </li>
+                                    <li class="nav-item mx-2">
+                                        <a class="nav-link hover-bg as-primary" href="#">Career</a>
+                                    </li>
+                                    <li class="nav-item mx-2">
+                                        <a class="nav-link hover-bg as-primary" href="#">blog</a>
+                                    </li>
+                                    <li class="nav-item mx-2">
+                                        <a class="nav-link hover-bg as-primary" href="#">Conatct</a>
+                                    </li>
+                                    <li class="nav-item mx-2">
+                                        <a class="nav-link hover-bg py-2 px-3 as-primary-bg text-light fw-bold" aria-current="page" href="#"><i class="text-light me-2 fa-solid fa-robot"></i> try out
+                      our demo</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </div>
+      </div>
+    </main>
+    <!-- main nav end -->
+    <!-- bottstrap script -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
