banner section done

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <!-- top Header start -->
 
-    <nav class="p-1 as-primary-bg text-light">
+    <nav class="p-1 as-primary-bg text-light d-sm-block d-none">
         <div class="container">
             <div class="row">
                 <div class="col-6">
@@ -119,19 +119,19 @@
                         </a>
                                             </li>
                                             <li>
-                                                <a class="dropdown-item as-primary hover-bg p-2 fw-bold" href="#">iBOS PeopleDesk
+                                                <a class="dropdown-item as-primary hover-bg p-2 fw-bold -1" href="#">iBOS PeopleDesk
                         </a>
                                             </li>
                                             <li>
-                                                <a class="dropdown-item as-primary hover-bg p-2 fw-bold" href="#">iBOS Prime VAT
+                                                <a class="dropdown-item as-primary hover-bg p-2 fw-bold -1" href="#">iBOS Prime VAT
                         </a>
                                             </li>
                                             <li>
-                                                <a class="dropdown-item as-primary hover-bg p-2 fw-bold" href="#">iBOS SME
+                                                <a class="dropdown-item as-primary hover-bg p-2 fw-bold -1" href="#">iBOS SME
                         </a>
                                             </li>
                                             <li>
-                                                <a class="dropdown-item as-primary hover-bg p-2 fw-bold" href="#">iBOS RTM
+                                                <a class="dropdown-item as-primary hover-bg p-2 fw-bold -1" href="#">iBOS RTM
                         </a>
                                             </li>
                                         </ul>
@@ -161,6 +161,113 @@
       </div>
     </main>
     <!-- main nav end -->
+    <!-- banner section start -->
+    <section class="mt-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 d-flex flex-column justify-content-center">
+            <div class="p-2">
+              <div>
+                <h3 class="as-primary fw-bold fs-5">
+                  The Power House of The Finest
+                  <span class="as-light-primary">Cloud-Based</span>
+                  Solutions
+                </h3>
+                <h1 class="as-primary fw-bolder" style="font-size: 3rem">
+                  Make Your Busines <br />
+                  <span class="typer as-light-primary d-block"></span>
+                </h1>
+                <p
+                  class="fs-5 text-dark"
+                  style="line-height: 30px; color: #333"
+                >
+                  iBOS is all about bringing in the finest solutions on your
+                  turf and giving your business the finest edge you can ask for.
+                </p>
+                <a
+                  href="#"
+                  class="text-light btn fs-5 fw-bolder as-primary-bg as-translate rounded-0"
+                >
+                  <i class="fa-solid fa-hand-point-right me-2"></i>Get
+                  Started</a
+                >
+                <a
+                  href="#"
+                  class="text-light btn fs-5 fw-bolder as-primary-bg m-2 as-translate rounded-0"
+                >
+                  <i class="fa-solid fa-circle-info me-2"></i>About Us</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <img
+              src="./assets/images/ibos-hero.webp"
+              class="img-fluid"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- banner section end -->
+
+    <!-- growing section start -->
+    <section class="my-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="./assets/images/ibos-about.webp"
+              class="img-fluid"
+              alt=""
+            />
+          </div>
+          <div class="col-md-6">
+            <div class="d-fles flex-column">
+              <div class="p-2">
+                <h3 class="as-primary fw-bolder fs-2">
+                  iBOS, The
+                  <span class="as-light-primary"> Fastest-Growing</span>
+                  Software Company in Bangladesh
+                </h3>
+                <p
+                  class="mt-4"
+                  style="
+                    line-height: 28px;
+                    color: rgb(24, 22, 51);
+                    font-size: 18px;
+                    font-weight: 500;
+                  "
+                >
+                  We have something for every single business! No matter what
+                  kind of business you’re handling – just name it and our
+                  products, developed by the finest experts will fill up your
+                  gap of having top-notch solutions for your business. With a
+                  creative approach and the best enterprise software engineers
+                  in town, we have proven that we can build any type of
+                  customized system to suit the customer’s needs.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- growing section end -->
+    <!-- type animation -->
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12 "></script>
+    <script>
+      let typed = new Typed(".typer ", {
+        strings: ["SIMPLER ", "BIGGER ", "BETTER ", "SMARTER "],
+        typeSpeed: 50,
+        backSpeed: 50,
+        loop: true,
+        cursorChar: " ",
+        fadeOutDelay: 1000,
+        loopCount: 8,
+      });
+    </script>
     <!-- bottstrap script -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
